doc/pyre: started the protocol narrative

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -258,10 +258,9 @@
 \def\th#1{\mbox{$#1^{\rm th}$}}
 
 % small caps
-\def\dem{{\sc dem}}
-\def\isce{{\sc isce}}
-\def\srtm{{\sc srtm}}
-\def\uml{{\sc uml}}
+\def\dem{{\small DEM}}
+\def\srtm{{\small SRTM}}
+\def\uml{{\small UML}}
 
 \def\bydef{\mathrel{\mathop:}=}
 
