--- a/doc/pyre/sections/intro.tex
+++ b/doc/pyre/sections/intro.tex
@@ -83,9 +83,9 @@
     \begin{itemize}
     \item become familiar with components, and their properties and behaviors
     \item describe the configuration process from the end user's point of view
-    \item build a simple pyre application that instantiates and exercises a component
-    \item gradually transform the app into a capability that is integrated into an open ended
-      environment
+    \item build a sequence of \isce\ applications of increasing power and versatility that
+      instantiate and exercise a component
+    \item transform the app into a capability that is integrated into an open ended environment
     \end{itemize}
 %
   \item much of the code in these examples is lifted straight out of the \isce\ 3.0 source
