doc/pyre: more protocol narrative

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -280,7 +280,7 @@
 \def\method#1{\mbox{\tt #1}}
 \def\operator#1{\mbox{\tt #1}}
 \def\package#1{\mbox{\tt #1}}
-\def\protocol#1{\mbox{\tt #1}}
+\def\protocol#1{\mbox{\color{pml@protocolcolor}\tt #1}}
 \def\pyrebuiltin#1{\mbox{\color{pml@pyrebuiltincolor}\tt #1}}
 \def\schema#1{\mbox{\color{pml@schemacolor}\tt #1}}
 \def\srcfile#1{\mbox{\tt #1}}
