doc/pyre: wrapped up the first pass on protocols

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -226,10 +226,11 @@
 \def\alglineref#1{{line~\ref{line:#1}}}
 \def\eqref#1{{Eq.~\ref{eq:#1}}}
 \def\figref#1{{Fig.~\ref{fig:#1}}}
-\def\secref#1{{Sec.~\ref{sec:#1}}}
-\def\tabref#1{{Table~\ref{tab:#1}}}
+\def\frameref#1{{p.~\ref{frame:#1}}}
 \def\lstref#1{{Listing~\ref{lst:#1}}}
 \def\lstlineref#1{{line~\ref{line:#1}}}
+\def\secref#1{{Sec.~\ref{sec:#1}}}
+\def\tabref#1{{Table~\ref{tab:#1}}}
 
 \def\supercite#1{\mbox{\scriptsize\raise 1.0ex\hbox{\cite{#1}}}}
 %\def\cpp{\mbox{\tt C\raise.4ex\hbox{++}}}
