doc/pyre: built the plexus structure diagram

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -274,6 +274,7 @@
 \def\class#1{\mbox{\tt #1}}
 \def\constraint#1{\mbox{\tt #1}}
 \def\component#1{\mbox{\color{pml@componentcolor}\tt #1}}
+\def\decorator#1{\mbox{\tt #1}}
 \def\function#1{\mbox{\tt #1}}
 \def\identifier#1{\mbox{\tt #1}}
 \def\keyword#1{\mbox{\tt #1}}
