--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -7,6 +7,27 @@
 
 \section{applications}
 
+% --------------------------------------
+\begin{frame}
+  \label{frame:pyre-configurables}
+%
+  \frametitle{The \component{Plexus} structure}
+%
+  \vskip -3ex
+  \only<1>{\includegraphics[height=0.9\textheight]{pyre-plexus-base}}
+  \only<2>{\includegraphics[height=0.9\textheight]{pyre-plexus-pedigree}}
+  \only<3>{\includegraphics[height=0.9\textheight]{pyre-plexus-traits}}
+  \only<4>{\includegraphics[height=0.9\textheight]{pyre-plexus-executive}}
+  \only<5>{\includegraphics[height=0.9\textheight]{pyre-plexus-shells}}
+  \only<6>{\includegraphics[height=0.9\textheight]{pyre-plexus-mpi}}
+%
+\end{frame}
+
+% --------------------------------------
+
+\TODO{
+  \item
+}
 
 
 %%% Local Variables:
