doc/pyre: added explanation of {pyre_default}; {applications} now have a {TODO} slide

--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -8,6 +8,7 @@
 \section{applications}
 
 % --------------------------------------
+\subsection{shells}
 \begin{frame}
   \label{frame:pyre-configurables}
 %
@@ -26,7 +27,13 @@
 % --------------------------------------
 
 \TODO{
-  \item
+  \item show a trivial script
+  \item show a simple application
+  \item explain plexus
+  \item convert simple app into a plexus action
+  \item more on configuration files
+  \item private filesystems
+  \item the standard layout
 }
 
 
