doc/pyre: added an example of a simple harness

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -227,6 +227,7 @@
 \def\eqref#1{{Eq.~\ref{eq:#1}}}
 \def\figref#1{{Fig.~\ref{fig:#1}}}
 \def\frameref#1{{p.~\ref{frame:#1}}}
+\def\framesref#1#2{{pp.~\ref{frame:#1}--\ref{frame:#2}}}
 \def\lstref#1{{Listing~\ref{lst:#1}}}
 \def\lstlineref#1{{line~\ref{line:#1}}}
 \def\secref#1{{Sec.~\ref{sec:#1}}}
