--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -10,7 +10,8 @@
 % --------------------------------------
 \subsection{shells}
 \begin{frame}
-  \label{frame:pyre-configurables}
+%
+  \label{frame:pyre-plexus}
 %
   \frametitle{The \component{Plexus} structure}
 %
