--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -290,7 +290,7 @@
 \def\trait#1{\mbox{\color{pml@traitcolor}\tt #1}}
 
 \def\TODO#1{{%
-  \subsection{to do}%
+  \subsectioninlbffalse%
   \frameinlbffalse%
   \begin{frame}[allowframebreaks]%
     \frametitle{Still to do}%
